# learnopengl_test

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/01_hello_windows/: main.cpp
src/02_hello_triangle/: main.cpp
